# AINomina

./: .clang-tidy  CMakeLists.txt  README.md
.github/workflows/: build_and_test.yml  codeql.yml
data/: example.cpp
data/prompts/: evaluate_all_names.prompt  is_good_variable_name.prompt.old
include/AINomina/: evaluate_names_action.hpp
include/AINomina/gemini/: gemini_client.hpp  prompt.hpp  request.hpp
src/: CMakeLists.txt  main.cpp
src/gemini/: gemini_client.cpp  prompt.cpp  request.cpp
